tests/ucc/bind/good/type-vs-var.c
typedef int a;

int main(void)
{
    int a = 0;

    return a;
}
