tests/ucc/bind/bad/redef-var-1.c
int a = 1;
int a = 0;

int main(void)
{
    return a;
}
